<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kontham.blueon.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/b_bluetooth"
        android:scaleType="centerInside"/>

    <TextView
        android:id="@+id/Bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:text="@string/Bluetooth" />

    <Button
        android:id="@+id/Turnon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Bluetooth"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.85"
        android:onClick="OnbuttonClickView"
        android:text="@string/Turnon" />

    <Button
        android:id="@+id/scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Turnon"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.85"
        android:onClick="OnDiscoverButtonClick"
        android:text="@string/scan" />

    <Button
        android:id="@+id/turnoff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.85"
        android:onClick="OnTurnOff"
        android:text="@string/Turnoff" />

    <Button
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/turnoff"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.85"
        android:onClick="OnMusicButtonClick"
        android:text="@string/play" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/play"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.85"
        android:onClick="OnSendButton"
        android:text="@string/send" />
</RelativeLayout>
